# learning_C

./: .gitignore
first_try_harmonic/: .dir-locals.el  analyse_script.py  meson.build
first_try_harmonic/builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  harmonic  test executable  test_executable
first_try_harmonic/builddir/meson-logs/: meson-log.txt  testlog.json  testlog.txt
first_try_harmonic/src/: .#harmonic_oscillator.c  harmonic_oscillator.c  harmonic_oscillator.h  main.c
first_try_harmonic/tests/: test_harmonic_oscillator.c
simple_print/: meson.build
simple_print/builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  what
simple_print/builddir/meson-logs/: meson-log.txt
simple_print/src/: first_main.c
